[package]
name = "todo-actix"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
mongodb = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
uuid = { version = "1.10.0" , features = ["v4", "serde"] }

